fix: unexpected stack spacing

--- a/packages/react/src/layouts/stack/stack.module.css
+++ b/packages/react/src/layouts/stack/stack.module.css
@@ -1,3 +1,3 @@
-.stack > * + * {
+.stack > div > * + * {
   margin-block-start: var(--stack-space);
 }
